@@ -15,6 +15,7 @@ Version 0.3.beta1
 - Fixed start & stop publishing dates not working
 - Fixed Authorize.net failed transaction bug
 - Improved: Authorize.net failed transaction response handling & log data
+- Removed pre-0.1 update code from runonce.php
 
 Version 0.2.4 (2011-01-??)
 ------------------------------
@@ -29,6 +30,7 @@ Version 0.2.4 (2011-01-??)
 - Fixed toggle button not appearing for non-admins (Ticket #253)
 - Fixed global operation labels in IE7 (Ticket #253)
 - Fixed order delete button appearing for non-admins (Ticket #192)
+- Fixed issues with runonce.php database file update on certain systems
 - Improved italian address formatting (Ticket #305)
 - Improved UK address formatting (Ticket #301)
 
